fixed logo alignment and scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,8 +9,10 @@ body {
   margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; 
-    overflow-y: scroll;
-    overflow-x: hidden;
+    /* overflow-y: scroll;
+    overflow-x: hidden; */
+    overflow-y: hidden; /* Hide vertical scrollbar */
+    overflow-x: hidden; /* Hide horizontal scrollbar */
       /* background-color: rgb(234, 247, 255);   */
       /* background-color: #e3f2fd;  */
      box-sizing: border-box; 
